tests/conformance/invalid/domain_chain_mismatch.svp
-- domain_chain_mismatch.svp — capture/admissibility fuera de familia de parameter_id

capture_spec CapA {
  parameter_id: 1;
  observation_domain: DomObs1;
  observation_space: ObsEsp1;
  failure_symbol: Bottom;
  mapping: MapCap1;
}

admissibility_spec AdmB {
  parameter_id: 2;
  states: {Ok, Degraded, Failed, U};
  rule: ReglaAdm2;
}

ternarizer Ter1 {
  observation_space: ObsEsp1;
  partition_zero: Zona0;
  partition_one: Zona1;
  partition_u: ZonaU;
  mapping: MapTer1;
}

horizon H1 {
  architecture: Arch1;
  events: [Ev1];
}

domain D_err {
  parameters: [P1];
  interface: I1;
  horizon: H1;
  capture_specs: [CapA];
  admissibility_specs: [AdmB];
  ternarizers: [Ter1];
  exogeneity_mask: Exo1;
  silent_u: SU1;
  transduction_policy: TP1;
  u_policy: UP1;
  closure_criterion: CC1;
}
